--- a/frappe/core/doctype/session_default_settings/session_default_settings.json
+++ b/frappe/core/doctype/session_default_settings/session_default_settings.json
@@ -1,4 +1,5 @@
 {
+ "actions": [],
  "creation": "2019-07-17 16:22:31.300991",
  "doctype": "DocType",
  "editable_grid": 1,
@@ -11,11 +12,13 @@
    "fieldname": "session_defaults",
    "fieldtype": "Table",
    "label": "Session Defaults",
-   "options": "Session Default"
+   "options": "Session Default",
+   "reqd": 1
   }
  ],
  "issingle": 1,
- "modified": "2019-07-19 16:04:33.971089",
+ "links": [],
+ "modified": "2021-07-02 11:01:02.607773",
  "modified_by": "Administrator",
  "module": "Core",
  "name": "Session Default Settings",
